WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187073
[iPad apps on macOS] Unable to interact with video elements that have started playing
https://bugs.webkit.org/show_bug.cgi?id=187073
Summary
[iPad apps on macOS] Unable to interact with video elements that have started...
Wenson Hsieh
Reported
2018-06-26 17:22:18 PDT
<
rdar://problem/40591107
>
Attachments
Patch
(4.35 KB, patch)
2018-06-26 19:15 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-06-26 19:15:19 PDT
Created
attachment 343676
[details]
Patch
WebKit Commit Bot
Comment 2
2018-06-26 22:06:58 PDT
Comment on
attachment 343676
[details]
Patch Clearing flags on attachment: 343676 Committed
r233246
: <
https://trac.webkit.org/changeset/233246
>
WebKit Commit Bot
Comment 3
2018-06-26 22:06:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug