Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeHostIOS.mm
@@ -134,8 +134,16 @@ using namespace WebCore;
 
 - (instancetype)initWithFrame:(CGRect)frame contextID:(uint32_t)contextID
 {
-    if ((self = [super initWithFrame:frame]))
-        [(CALayerHost *)[self layer] setContextId:contextID];
+    if ((self = [super initWithFrame:frame])) {
+        CALayerHost *layer = (CALayerHost *)self.layer;
+        layer.contextId = contextID;
+#if ENABLE(MINIMAL_SIMULATOR)
+        // When running iOS apps on macOS, kCAContextIgnoresHitTest isn't respected; instead, we avoid
+        // hit-testing to the remote context by disabling hit-testing on its host layer. See
+        // <rdar://problem/40591107> for more details.
+        layer.allowsHitTesting = NO;
+#endif
+    }
     
     return self;
 }
